--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="darker_gray">#444444</color>
+
     <color name="favorite_button_activated">@color/colorAccent</color>
 
     <color name="act_movie_data_movie_title_bgcolor">@color/colorPrimaryDark</color>
