separator for the reviews
Signed-off-by: lsitec333.asato <andre.shoji@lsitec.org.br>

--- a/app/src/main/res/layout/movie_data_reviews_items.xml
+++ b/app/src/main/res/layout/movie_data_reviews_items.xml
@@ -21,6 +21,6 @@
         tools:text="@string/tools_review_content"
         style="@style/MovieReviewsBodyStyle" />
 
-
+    <View style="@style/Divider"/>
 
 </LinearLayout>
