--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,6 +43,7 @@
 
     <style name="MovieReviewsLabelStyle" parent="MovieDetailsLabelStyle">
         <item name="android:textColor">@color/darker_gray</item>
+        <item name="android:paddingTop">@dimen/act_movie_data_trailers_paddingBottom</item>
     </style>
 
     <style name="MovieReviewsBodyStyle" parent="MovieDetailsBodyStyle">
@@ -58,4 +59,9 @@
         <item name="android:paddingBottom">@dimen/act_movie_data_trailer_list_padding</item>
     </style>
 
+    <style name="Divider">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">?android:attr/listDivider</item>
+    </style>
 </resources>
