fix trailer label being highlighter. adapter now sets to show or not the label.
Signed-off-by: lsitec333.asato <andre.shoji@lsitec.org.br>

--- a/app/src/main/res/layout/movie_data_details_items.xml
+++ b/app/src/main/res/layout/movie_data_details_items.xml
@@ -48,6 +48,15 @@
         app:layout_constraintTop_toBottomOf="@+id/act_movie_data_overview_label"
         tools:text="@string/tools_movie_overview" />
 
+    <TextView
+        android:id="@+id/act_movie_data_trailer_label"
+        style="@style/MovieDetailsLabelStyle2"
+        tools:text="@string/trailer_other_label"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/act_movie_data_overview_tv"
+        />
+
 </android.support.constraint.ConstraintLayout>
 
 
