--- a/app/src/main/res/layout/movie_data_trailers_items.xml
+++ b/app/src/main/res/layout/movie_data_trailers_items.xml
@@ -1,41 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
-    android:layout_gravity="start"
-    android:background="@drawable/movie_trailer_list_selector"
-
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_width="wrap_content">
+    android:layout_gravity="start"
+    android:layout_marginEnd="@dimen/act_movie_data_body_text_paddingRight"
+    android:layout_marginStart="@dimen/act_movie_data_body_text_paddingLeft">
 
-    <TextView
-        android:id="@+id/act_movie_data_trailer_label"
-        style="@style/MovieDetailsLabelStyle2"
-        tools:text="@string/trailer_other_label"
-        android:visibility="gone"
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/movie_data_trailers_constraint_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        />
 
-    <ImageView
-        android:id="@+id/movie_trailer_icon_image_view"
-        android:layout_width="@dimen/act_movie_data_trailer_icon_size"
-        android:layout_height="@dimen/act_movie_data_trailer_icon_size"
-        android:layout_marginStart="@dimen/act_movie_data_body_text_paddingLeft"
-        android:layout_marginEnd="@dimen/act_movie_data_body_text_paddingRight"
-        android:background="@drawable/ic_play_button"
-        app:layout_constraintBottom_toBottomOf="@+id/movie_trailer_title_tv"
-        app:layout_constraintTop_toBottomOf="@+id/act_movie_data_trailer_label"
-        app:layout_constraintStart_toStartOf="parent"
-      />
+    android:background="@drawable/movie_trailer_list_selector"
+    android:orientation="horizontal"
+        >
 
-    <TextView
-        android:id="@+id/movie_trailer_title_tv"
-        style="@style/MovieDetailsTrailerListStyle"
-        app:layout_constraintTop_toBottomOf="@+id/act_movie_data_trailer_label"
-        app:layout_constraintStart_toEndOf="@+id/movie_trailer_icon_image_view"
-        tools:text="@string/tools_trailer_tile" />
+        <ImageView
+            android:id="@+id/movie_trailer_icon_image_view"
+            android:layout_width="@dimen/act_movie_data_trailer_icon_size"
+            android:layout_height="@dimen/act_movie_data_trailer_icon_size"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/ic_play_button"
+            app:layout_constraintBottom_toBottomOf="parent"
+
+            />
+
+        <TextView
+            android:id="@+id/movie_trailer_title_tv"
+            style="@style/MovieDetailsTrailerListStyle"
+            app:layout_constraintStart_toEndOf="@+id/movie_trailer_icon_image_view"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:text="@string/tools_trailer_tile" />
+
+
+
+    </android.support.constraint.ConstraintLayout>
+
 
 </android.support.constraint.ConstraintLayout>
