--- a/app/src/main/res/layout/movie_data_items.xml
+++ b/app/src/main/res/layout/movie_data_items.xml
@@ -8,18 +8,8 @@
 
     <ImageView
         android:id="@+id/movie_poster_image_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true" />
-
-    <!-- TODO(fix blank screen). this temporary fixes it. do better than this -->
-    <TextView
-        android:id="@+id/movie_poster_title_tv"
-        android:textColor="@android:color/white"
+        android:layout_width="@dimen/act_movie_data_poster_w"
+        android:layout_height="@dimen/act_movie_data_poster_h"
         android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-
-
+        android:adjustViewBounds="true" />
 </LinearLayout>
