--- a/app/src/main/res/layout/activity_movie_data.xml
+++ b/app/src/main/res/layout/activity_movie_data.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_movie_data_root_layout_id"
@@ -8,10 +8,22 @@
     tools:context="com.shoji.example.android.popularmoviesstage1.MovieDataActivity"
     android:orientation="vertical">
 
+    <ProgressBar
+        android:id="@+id/act_movie_data_pb_loading_progress"
+        android:layout_width="@dimen/act_main_progressbar_dimen"
+        android:layout_height="@dimen/act_main_progressbar_dimen"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_gravity="center"
+        android:visibility="invisible" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview_movies_trailer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
-</ScrollView>
+</android.support.constraint.ConstraintLayout>
