--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -2,6 +2,7 @@
 <resources>
     <integer name="main_activity_columns_width_divider">400</integer>
     <integer name="main_activity_columns_minimum_num_columns">2</integer>
+    <integer name="main_activity_columns_maximum_num_columns">5</integer>
 
     <!-- Positions for Array sort_criterion_array -->
     <integer name="pref_sort_criterion_default_value">@integer/pref_sort_criterion_by_popularity</integer>
