--- a/app/src/main/res/layout/activity_movie_data.xml
+++ b/app/src/main/res/layout/activity_movie_data.xml
@@ -21,7 +21,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview_movies_trailer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
